# ccompiler

./: CMakeLists.txt  README.md  sourceTest.h
.github/workflows/: cmake.yml
src/c/main/: CMakeLists.txt  compiler.c  compiler.h  environment.h  escapeSequence.c  escapeSequence.h  lexicalParser.c  lexicalParser.h  limits.h  macro.c  macro.h  main.c  options.c  options.h  path.c  path.h  preProcessor.c  preProcessor.h  sourceFileCompiler.c  sourceFileCompiler.h
src/c/test/: CMakeLists.txt  alternate_test_compiler.c  runAllTests.c  sourceFile.c  sourceFile2.c  sourceFile3.c  test_addMacro.c  test_addPath.c  test_compileSourceFile.c  test_compiler.c  test_copyMacroList.c  test_destroyMacroList.c  test_destroyOptions.c  test_destroyPathList.c  test_escapeSequence.c  test_findFile.c  test_getMacro.c  test_initializeMacroList.c  test_initializeOptions.c  test_initializePathList.c  test_initializePreProcessor.c  test_initializeSourceFileCompiler.c  test_preProcessor.c  test_replaceAllMacros.c  test_sourceFileCompiler.c
